PSP/borradores/ae/jwt/MUNDIALREST/src/main/java/org/example/mundialrest/common/errors/TeamNotFoundException.java
package org.example.mundialrest.common.errors;

public class TeamNotFoundException extends RuntimeException {
    public TeamNotFoundException(String message) {
        super(message);
    }
}

